--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
 }
 
 #nprogress .bar {
-  background: linear-gradient(90deg, #06b6d4, #0891b2);
+  background: linear-gradient(90deg, #3b82f6, #2563eb);
   position: fixed;
   z-index: 99999;
   top: 0;
@@ -22,7 +22,7 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px #06b6d4, 0 0 5px #0891b2;
+  box-shadow: 0 0 10px #3b82f6, 0 0 5px #2563eb;
   opacity: 1;
   transform: rotate(3deg) translate(0px, -4px);
 }
